--- a/styles.css
+++ b/styles.css
@@ -420,3 +420,210 @@ header {
   top: 14%;
   border-radius: 50%;
 }
+
+.features-wrap {
+  width: 1600px;
+  height: 400px;
+  margin: 0 auto;
+  background-color: white;
+}
+
+.features-wrap__title {
+  text-align: center;
+  padding-top: 80px;
+  margin-bottom: 74px;
+
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 56px;
+  /* identical to box height, or 156% */
+
+  text-align: center;
+
+  /* Content/ header */
+
+  color: #1b1c20;
+}
+
+.features-container {
+  display: flex;
+  margin-left: 152px;
+}
+
+.features-container__video {
+  position: relative;
+  width: 416px;
+  margin-right: 24px;
+}
+
+.video__title {
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 33px;
+  /* identical to box height, or 157% */
+
+  /* Content/ header */
+
+  color: #1b1c20;
+  margin-bottom: 12px;
+  padding-left: 112px;
+}
+
+.video__desc {
+  height: 48px;
+
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* or 150% */
+
+  /* Content/ body */
+
+  color: #383a47;
+  padding-left: 112px;
+}
+
+.video__icon-circle {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  left: 7%;
+  top: -59%;
+
+  /* Brand/P2 */
+
+  background: #ffdfcd;
+  mix-blend-mode: normal;
+
+  border-radius: 50%;
+}
+
+.video__icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.features-container__time {
+  position: relative;
+  width: 416px;
+  margin-right: 24px;
+}
+
+.time__title {
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 33px;
+  /* identical to box height, or 157% */
+
+  /* Content/ header */
+
+  color: #1b1c20;
+  margin-bottom: 12px;
+  padding-left: 112px;
+}
+
+.time__desc {
+  height: 48px;
+
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* or 150% */
+
+  /* Content/ body */
+
+  color: #383a47;
+  padding-left: 112px;
+}
+
+.time__icon-circle {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  left: 7%;
+  top: -59%;
+
+  /* Brand/P2 */
+
+  background: #dbeddc;
+  mix-blend-mode: normal;
+
+  border-radius: 50%;
+}
+
+.time__icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.features-container__safe {
+  position: relative;
+  width: 416px;
+}
+
+.safe__title {
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 33px;
+  /* identical to box height, or 157% */
+
+  /* Content/ header */
+
+  color: #1b1c20;
+  margin-bottom: 12px;
+  padding-left: 112px;
+}
+
+.safe__desc {
+  height: 48px;
+
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* or 150% */
+
+  /* Content/ body */
+
+  color: #383a47;
+  padding-left: 112px;
+}
+
+.safe__icon-circle {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  left: 7%;
+  top: -59%;
+
+  /* Brand/P2 */
+
+  background: #fee8ce;
+  mix-blend-mode: normal;
+
+  border-radius: 50%;
+}
+
+.safe__icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
