--- a/styles.css
+++ b/styles.css
@@ -420,3 +420,72 @@ header {
   top: 14%;
   border-radius: 50%;
 }
+
+.meet-wrap {
+  position: relative;
+  width: 1600px;
+  height: 585;
+  margin: 0 auto;
+  background-color: #f8f8fa;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.meet-text-container {
+  margin-top: 140px;
+  margin-right: 277px;
+  margin-bottom: 152px;
+}
+
+.meet-text-container__title {
+  width: 511px;
+
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+  /* or 117% */
+
+  /* Content/ header */
+
+  color: #1b1c20;
+  margin-bottom: 43px;
+}
+
+.meet-text-container__latin {
+  width: 440px;
+
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 30px;
+  /* or 167% */
+
+  /* Content/ body */
+
+  color: #383a47;
+  margin-bottom: 26px;
+}
+
+.meet-text-container__desc {
+  width: 431px;
+
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  /* or 162% */
+
+  /* Content/ body */
+
+  color: #383a47;
+}
+
+.meet-text-container__video-call {
+  position: absolute;
+  left: 10%;
+  top: 20%;
+}
